--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
+title: Smart Payroll Solutions
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+description: Documentation for Smart Payroll Solutions
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
